added methods of url sets: all_spells, urlset_spells, add_spell
